Hireforce/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_publish_after_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto publish after approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <label>Brazil</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>CN</fullName>
                    <label>China</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>India</label>
                </value>
                <value>
                    <fullName>IE</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <label>Italy</label>
                </value>
                <value>
                    <fullName>JP</fullName>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>MX</fullName>
                    <label>Mexico</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <isActive>false</isActive>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <isActive>false</isActive>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <isActive>false</isActive>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <isActive>false</isActive>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <isActive>false</isActive>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <isActive>false</isActive>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <isActive>false</isActive>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <isActive>false</isActive>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <isActive>false</isActive>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <isActive>false</isActive>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <isActive>false</isActive>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <isActive>false</isActive>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <isActive>false</isActive>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <isActive>false</isActive>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <isActive>false</isActive>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <isActive>false</isActive>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <isActive>false</isActive>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <isActive>false</isActive>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <isActive>false</isActive>
                    <label>Belgium</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Corporate Functions</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Development &amp; Strategy</fullName>
                </value>
                <value>
                    <fullName>Employee Success</fullName>
                </value>
                <value>
                    <fullName>Enterprise Technology &amp; Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fixed Term &amp; Temporary</fullName>
                </value>
                <value>
                    <fullName>Global Affairs</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Program &amp; Project Management</fullName>
                </value>
                <value>
                    <fullName>Real Estate &amp; Facility Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Software Engineering</fullName>
                </value>
                <value>
                    <fullName>User Experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hiring_Manger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manger</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs Managed by Me</relationshipLabel>
        <relationshipName>Jobs_Managed_by_Me</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <displayFormat>JB-{0000000}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>Mid Level</fullName>
                </value>
                <value>
                    <fullName>Senior Level</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready to be Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Sent back for Correction</fullName>
                </value>
                <value>
                    <fullName>Ready to be Published</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Time</fullName>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Requirement__c</fullName>
        <label>Language Requirement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_And_Responsibilities__c</fullName>
        <label>Role And Responsibilities</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salary_Range__c</fullName>
        <label>Salary Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                    <label>Australian Capital Territory</label>
                </value>
                <value>
                    <fullName>NSW</fullName>
                    <label>New South Wales</label>
                </value>
                <value>
                    <fullName>NT</fullName>
                    <label>Northern Territory</label>
                </value>
                <value>
                    <fullName>QLD</fullName>
                    <label>Queensland</label>
                </value>
                <value>
                    <fullName>SA</fullName>
                    <label>South Australia</label>
                </value>
                <value>
                    <fullName>TAS</fullName>
                    <label>Tasmania</label>
                </value>
                <value>
                    <fullName>VIC</fullName>
                    <label>Victoria</label>
                </value>
                <value>
                    <fullName>WA</fullName>
                    <label>Western Australia</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                    <label>Acre</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Alagoas</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Amazonas</label>
                </value>
                <value>
                    <fullName>AMP</fullName>
                    <label>Amapá</label>
                </value>
                <value>
                    <fullName>BAA</fullName>
                    <label>Bahia</label>
                </value>
                <value>
                    <fullName>CE</fullName>
                    <label>Ceará</label>
                </value>
                <value>
                    <fullName>DF</fullName>
                    <label>Distrito Federal</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                    <label>Espírito Santo</label>
                </value>
                <value>
                    <fullName>GOS</fullName>
                    <label>Goiás</label>
                </value>
                <value>
                    <fullName>MA</fullName>
                    <label>Maranhão</label>
                </value>
                <value>
                    <fullName>MG</fullName>
                    <label>Minas Gerais</label>
                </value>
                <value>
                    <fullName>MSL</fullName>
                    <label>Mato Grosso do Sul</label>
                </value>
                <value>
                    <fullName>MTO</fullName>
                    <label>Mato Grosso</label>
                </value>
                <value>
                    <fullName>PAA</fullName>
                    <label>Pará</label>
                </value>
                <value>
                    <fullName>PBB</fullName>
                    <label>Paraíba</label>
                </value>
                <value>
                    <fullName>PER</fullName>
                    <label>Pernambuco</label>
                </value>
                <value>
                    <fullName>PII</fullName>
                    <label>Piauí</label>
                </value>
                <value>
                    <fullName>PRA</fullName>
                    <label>Paraná</label>
                </value>
                <value>
                    <fullName>RJO</fullName>
                    <label>Rio de Janeiro</label>
                </value>
                <value>
                    <fullName>RIO</fullName>
                    <label>Rio Grande do Norte</label>
                </value>
                <value>
                    <fullName>RO</fullName>
                    <label>Rondônia</label>
                </value>
                <value>
                    <fullName>RR</fullName>
                    <label>Roraima</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Employment_Status__c</columns>
        <columns>Job_Type__c</columns>
        <columns>Country__c</columns>
        <columns>State_Province__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Change_Draft_Status</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Job_Status__c ) &amp;&amp;  ISPICKVAL(PRIORVALUE
(Job_Status__c), &quot;Draft&quot;) &amp;&amp; NOT( ISPICKVAL(Job_Status__c, &apos;Ready to be Submitted for Approval&apos;) )</errorConditionFormula>
        <errorMessage>Job status can be changed from Draft to Ready to be Submitted for Approval only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Record_Draft_Status</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  NOT(ISPICKVAL(Job_Status__c, &quot;Draft&quot;))</errorConditionFormula>
        <errorMessage>New Job record can be Draft only</errorMessage>
    </validationRules>
</CustomObject>